take pull from dev

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header class="bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
         <div class="md:min-h-[900px] min-h-[844px] max-w-[1240px] mx-auto px-[30px] relative">
             <div
@@ -69,6 +70,7 @@
             <img class="h-[46px] w-[41px]" src="./assets/images/svg/logo.svg" alt="logo">
         </div>
     </header>
+    <!-- patoarchitekciPodcast -->
     <section id="patoarchitekciPodcast" class="min-h-[941px] bg-yellow relative">
         <div class="max-w-[1261px] w-full mx-auto px-[30px] pt-[74px]">
             <img class="ml-auto pb-[56px]" src="./assets/images/svg/rounded-cross.svg" alt="">
@@ -259,6 +261,36 @@
             </div>
             <img src="./assets/images/png/cloud-1.png" alt="cloud-1" class="absolute bottom-0 right-0">
     </section>
+    <!-- newsletter -->
+    <section class="px-[30px] relative min-h-[439px] sm:max-h-[758px] sm:min-h-[758px]">
+        <img class="absolute top-[250px] left-18 pointer-events-none xl:left-20 max-lg:hidden"
+            src="./assets/images/svg/newsletter-arrow.svg" alt="arrow-img">
+        <div class="max-w-[1220px] mx-auto relative pt-10 md:pt-[103px] z-5">
+            <h2
+                class="font-tomorrow font-semibold text-center text-2xl md:text-[40px] leading-[110%] md:leading-[29px] uppercase text-light-black">
+                ZAPISZ SIĘ DO NEWSLETTERA</h2>
+            <p
+                class="font-inter mx-auto font-medium max-sm:text-xs leading-[120%] text-center text-light-black max-w-[584px] pt-[15px] sm:pt-8">
+                Wypełnij poniższy formularz, aby być na bieżąco ze wszystkimi odcinkami Patoarchitektów i uzyskać dostęp
+                do dodatkowych materiałów.</p>
+            <div class="max-w-[500px] mx-auto w-full mt-8 sm:mt-[67px]">
+                <input
+                    class="max-w-[435px] flex justify-center mx-auto w-full text-center px-8 font-medium text-2xl leading-[32px] text-gray placeholder:text-gray outline-0"
+                    type="email" placeholder="Adres e-mail">
+                <div class="border mt-1.5 border-orange"></div>
+            </div>
+            <div class="flex justify-center mt-8 sm:mt-[93px]">
+                <button
+                    class="bg-orange hover:text-orange hover:bg-light-black transition-all duration-300 ease-linear active:scale-95 text-light-black p-[10.5px] w-full max-w-[353px] rounded-[70px] font-bold sm:text-2xl leading-[100%] uppercase">Zapisz
+                    się</button>
+            </div>
+        </div>
+        <img class="w-full absolute bottom-0 left-0 z-20 pointer-events-none"
+            src="./assets/images/png/footer-black-cloud.png" alt="cloud-img">
+        <img class="absolute right-0 bottom-0 pointer-events-none max-sm:max-w-[114px] max-sm:max-h-[166px] max-md:max-w-[300px]"
+            src="./assets/images/svg/horse.svg" alt="horse-img">
+    </section>
+    <!-- footer -->
     <footer class="bg-light-black px-[30px] sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
         <div class="max-w-[1240px] mx-auto">
             <div
