solved some mistakes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- header -->
-    <header class="bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
+    <header class="max-w-[1920px] mx-auto bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
         <div class="md:min-h-[900px] min-h-[844px] max-w-[1240px] mx-auto px-[30px] relative">
             <div
                 class="absolute top-0 w-full max-w-[998px] text-light-black left-1/2 -translate-x-1/2 bg-white h-11 md:flex hidden justify-center font-inter items-center !leading-[100%] uppercase text-base font-bold text-center rounded-b-[15px]">
@@ -53,8 +53,8 @@
             </nav>
             <div
                 class="w-full md:pt-[114px] pt-[133px] flex md:max-w-[800px] md:flex-row flex-col mx-auto px-[30px]  justify-center items-center md:gap-[52px] gap-[27px]">
-                <img class="md:max-w-[236px] max-w-[250px] w-full" src="./assets/images/svg/logo.svg" alt="logo">
-                <img class="md:max-w-[511px] max-w-[250px] w-full" src="./assets/images/svg/logo-text.svg" alt="text">
+                <img class="md:max-w-[236px] max-w-[250px] w-full pointer-events-none" src="./assets/images/svg/logo.svg" alt="logo">
+                <img class="md:max-w-[511px] max-w-[250px] w-full pointer-events-none" src="./assets/images/svg/logo-text.svg" alt="text">
             </div>
             <div class="flex justify-center items-center flex-col md:pt-[161px] pt-[121px]">
                 <button
@@ -67,13 +67,13 @@
         </div>
         <div
             class="size-20 bg-white rounded-full max-md:hidden absolute right-[47px] bottom-[47px] flex justify-center items-center">
-            <img class="h-[46px] w-[41px]" src="./assets/images/svg/logo.svg" alt="logo">
+            <img class="h-[46px] w-[41px] pointer-events-none" src="./assets/images/svg/logo.svg" alt="logo">
         </div>
     </header>
     <!-- patoarchitekciPodcast -->
-    <section id="patoarchitekciPodcast" class="min-h-[941px] bg-yellow relative">
+    <section id="patoarchitekciPodcast" class="max-w-[1920px] mx-auto min-h-[941px] bg-yellow relative">
         <div class="max-w-[1261px] w-full mx-auto px-[30px] pt-[74px]">
-            <img class="ml-auto pb-[56px]" src="./assets/images/svg/rounded-cross.svg" alt="">
+            <img class="ml-auto pb-[56px] pointer-events-none" src="./assets/images/svg/rounded-cross.svg" alt="">
             <div class="uppercase text-[48px] font-tomorrow min-h-[325px]">
                 <h3 class="font-semibold text-black -mt-3 leading-[123%]">Patoarchitekci to podcast,</h3>
                 <p class="font-medium text-light-black leading-[120%] -mb-5">
@@ -83,9 +83,9 @@
                     którzy z humorem i szczerością biorą na warsztat najtrudniejsze tematy technologiczne.
                 </p>
             </div>
-            <img class="pt-[66px]" src="./assets/images/svg/cross.svg" alt="">
+            <img class="pt-[66px] pointer-events-none" src="./assets/images/svg/cross.svg" alt="">
         </div>
-        <img class="absolute bottom-0 right-0 w-full" src="./assets/images/png/cloud-white.png" alt="white cloud">
+        <img class="absolute bottom-0 right-0 w-full pointer-events-none" src="./assets/images/png/cloud-white.png" alt="white cloud">
     </section>
     <!-------------------NAS SECTION--------------------->
     <section class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
