add max-width in footer

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <img src="./assets/images/png/cloud-1.png" alt="cloud-1" class="absolute bottom-0 right-0">
     </section>
     <!-- newsletter -->
-    <section class="px-[30px] relative min-h-[439px] sm:max-h-[758px] sm:min-h-[758px]">
+    <section class="px-[30px] relative min-h-[439px] sm:max-h-[758px] sm:min-h-[758px] max-w-[1920px] mx-auto">
         <img class="absolute top-[250px] left-18 pointer-events-none xl:left-20 max-lg:hidden"
             src="./assets/images/svg/newsletter-arrow.svg" alt="arrow-img">
         <div class="max-w-[1220px] mx-auto relative pt-10 md:pt-[103px] z-5">
@@ -291,7 +291,8 @@
             src="./assets/images/svg/horse.svg" alt="horse-img">
     </section>
     <!-- footer -->
-    <footer class="bg-light-black px-[30px] sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
+    <footer
+        class="bg-light-black px-[30px] max-w-[1920px] mx-auto sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
         <div class="max-w-[1240px] mx-auto">
             <div
                 class="flex justify-center py-[48.5px] items-center sm:justify-between max-w-[1220px] max-sm:gap-[37px]">
