accordion speed updated

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <img class="absolute bottom-0 right-0 w-full pointer-events-none" src="./assets/images/png/cloud-white.png" alt="white cloud">
     </section>
     <!-------------------NAS SECTION--------------------->
-    <section class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
+    <section id="oNas" class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
         <div class="max-w-[1240px] mx-auto lg:pt-[105px] md:pt-[140px] pt-[70px] xl:pb-[250px] lg:pb-[120px]">
             <div class="lg:flex px-[30px]">
                 <div class="lg:max-w-md">
@@ -103,7 +103,7 @@
                             class="font-semibold md:text-[40px] text-4xl text-light-black font-tomorrow leading-[48px] uppercase text-white">
                             Łukasz Kałużny
                         </h2>
-                        <p class="font-inter font-medium md:text-xl text-lg leading-[100%] pt-[35px] lg:max-w-[423px]">
+                        <p class="font-inter font-medium md:text-xl text-lg leading-[100%] pt-[35px] lg:max-w-[422px]">
                             Inżynier, architekt i współzałożyciel Protopia. Specjalista od Microsoft Azure z tytułem MVP
                             od
                             2012 roku. Uwielbia wyzwania i najnowsze technologie. Łukasz pomaga firmom przekształcać
@@ -169,7 +169,7 @@
                     class="lg:pb-[93px] pb-[40px]  max-lg:size-28 max-md:size-20">
             </div>
             <div id="accordion" class="flex flex-col md:gap-11 gap-6">
-                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
+                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
                         class="accordion-header w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
@@ -181,11 +181,11 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-500 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
-                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
+                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
                         class="accordion-header w-full uppercase flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
@@ -197,11 +197,11 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-500 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
-                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
+                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
                         class="accordion-header uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
@@ -213,11 +213,11 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-500 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
-                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
+                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
                         class="accordion-header uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
@@ -229,7 +229,7 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-500 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
