--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
                     class="flex md:justify-between duration-300 justify-center z-40 max-md:bg-[#803b24] max-md:fixed top-0 -right-full items-center py-5 px-[23px] w-full font-inter max-md:min-h-screen max-md:w-full max-md:flex-col max-md:gap-y-10">
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a href="#gdzieSłuchać">Gdzie słuchać</a>
+                        <a id="nav-link" href="#gdzieSłuchać">Gdzie słuchać</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a href="#oNas">O nas</a>
+                        <a id="nav-link" href="#oNas">O nas</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a href="#szkolenia">Szkolenia</a>
+                        <a id="nav-link" href="#szkolenia">Szkolenia</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a href="#bezpłatnaKonsultacja">Bezpłatna Konsultacja</a>
+                        <a id="nav-link" href="#bezpłatnaKonsultacja">Bezpłatna Konsultacja</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a href="#kontakt">Kontakt</a>
+                        <a id="nav-link" href="#kontakt">Kontakt</a>
                     </li>
                 </ul>
                 <div onclick="toggleNavbar()"
@@ -71,21 +71,21 @@
         </div>
     </header>
     <!-- patoarchitekciPodcast -->
-    <section id="patoarchitekciPodcast" class="max-w-[1920px] mx-auto min-h-[941px] bg-yellow relative">
-        <div class="max-w-[1261px] w-full mx-auto px-[30px] pt-[74px]">
-            <img class="ml-auto pb-[56px] pointer-events-none" src="./assets/images/svg/rounded-cross.svg" alt="">
-            <div class="uppercase text-[48px] font-tomorrow min-h-[325px]">
-                <h3 class="font-semibold text-black -mt-3 leading-[123%]">Patoarchitekci to podcast,</h3>
-                <p class="font-medium text-light-black leading-[120%] -mb-5">
+    <section id="patoarchitekciPodcast" class="max-w-[1920px] mx-auto md:min-h-[941px] bg-yellow relative">
+        <div class="max-w-[1261px] w-full mx-auto px-[30px] md:pt-[74px] py-[46.5px]">
+            <img class="ml-auto md:flex hidden pb-[56px] pointer-events-none" src="./assets/images/svg/rounded-cross.svg" alt="">
+            <div class="uppercase lg:text-[48px] md:text-[35px] sm:text-[28px] text-[20px] font-tomorrow md:min-h-[325px]">
+                <h3 class="font-semibold text-black md:leading-[123%] leading-[119%] cap-trim">Patoarchitekci to podcast,</h3>
+                <p class="font-medium text-light-black md:leading-[120%] leading-[119%] cap-trim">
                     który rozkłada IT na czynniki pierwsze, bez zbędnego żargonu i BS. Prowadzą go Łukasz Kałużny i
                     Szymon Warda
                     – eksperci,
                     którzy z humorem i szczerością biorą na warsztat najtrudniejsze tematy technologiczne.
                 </p>
             </div>
-            <img class="pt-[66px] pointer-events-none" src="./assets/images/svg/cross.svg" alt="">
+            <img class="pt-[66px] md:flex hidden pointer-events-none" src="./assets/images/svg/cross.svg" alt="">
         </div>
-        <img class="absolute bottom-0 right-0 w-full pointer-events-none" src="./assets/images/png/cloud-white.png" alt="white cloud">
+        <img class="absolute md:flex hidden bottom-0 right-0 w-full pointer-events-none" src="./assets/images/png/cloud-white.png" alt="white cloud">
     </section>
     <!-------------------NAS SECTION--------------------->
     <section id="oNas" class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
