some alignment fixed

--- a/index.html
+++ b/index.html
@@ -75,18 +75,22 @@
         <div class="max-w-[1261px] w-full mx-auto px-[30px] md:pt-[74px] py-[46.5px]">
             <img class="ml-auto md:flex hidden pb-[56px] pointer-events-none" src="./assets/images/svg/rounded-cross.svg" alt="">
             <div class="uppercase lg:text-[48px] md:text-[35px] sm:text-[28px] text-[20px] font-tomorrow md:min-h-[325px]">
-                <h3 class="font-semibold text-black md:leading-[123%] leading-[119%] cap-trim">Patoarchitekci to podcast,</h3>
-                <p class="font-medium text-light-black md:leading-[120%] leading-[119%] cap-trim">
+                <h3 class="font-semibold text-black md:leading-[123%] md:-mt-3 leading-[119%] max-md:cap-trim">Patoarchitekci to podcast,</h3>
+                <p class="font-medium text-light-black md:leading-[120%] leading-[119%] md:-md-[22px] max-md:cap-trim">
                     który rozkłada IT na czynniki pierwsze, bez zbędnego żargonu i BS. Prowadzą go Łukasz Kałużny i
                     Szymon Warda
                     – eksperci,
                     którzy z humorem i szczerością biorą na warsztat najtrudniejsze tematy technologiczne.
                 </p>
             </div>
-            <img class="pt-[66px] md:flex hidden pointer-events-none" src="./assets/images/svg/cross.svg" alt="">
+            <img class="pt-[47px] md:flex hidden pointer-events-none" src="./assets/images/svg/cross.svg" alt="">
         </div>
         <img class="absolute md:flex hidden bottom-0 right-0 w-full pointer-events-none" src="./assets/images/png/cloud-white.png" alt="white cloud">
     </section>
+    <!-- podcast section -->
+     <section id="podcast" class="min-h-1007px">
+
+     </section>
     <!-------------------NAS SECTION--------------------->
     <section id="oNas" class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
         <div class="max-w-[1240px] mx-auto lg:pt-[105px] md:pt-[140px] pt-[70px] xl:pb-[250px] lg:pb-[120px]">
