--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
     <!-- header -->
-    <header class="max-w-[1920px] mx-auto bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
+    <header
+        class="max-w-[1920px] mx-auto bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
         <div class="md:min-h-[900px] min-h-[844px] max-w-[1240px] mx-auto px-[30px] relative">
             <div
                 class="absolute top-0 w-full max-w-[998px] text-light-black left-1/2 -translate-x-1/2 bg-white h-11 md:flex hidden justify-center font-inter items-center !leading-[100%] uppercase text-base font-bold text-center rounded-b-[15px]">
@@ -53,8 +54,10 @@
             </nav>
             <div
                 class="w-full md:pt-[114px] pt-[133px] flex md:max-w-[800px] md:flex-row flex-col mx-auto px-[30px]  justify-center items-center md:gap-[52px] gap-[27px]">
-                <img class="md:max-w-[236px] max-w-[250px] w-full pointer-events-none" src="./assets/images/svg/logo.svg" alt="logo">
-                <img class="md:max-w-[511px] max-w-[250px] w-full pointer-events-none" src="./assets/images/svg/logo-text.svg" alt="text">
+                <img class="md:max-w-[236px] max-w-[250px] w-full pointer-events-none"
+                    src="./assets/images/svg/logo.svg" alt="logo">
+                <img class="md:max-w-[511px] max-w-[250px] w-full pointer-events-none"
+                    src="./assets/images/svg/logo-text.svg" alt="text">
             </div>
             <div class="flex justify-center items-center flex-col md:pt-[161px] pt-[121px]">
                 <button
@@ -73,9 +76,12 @@
     <!-- patoarchitekciPodcast -->
     <section id="patoarchitekciPodcast" class="max-w-[1920px] mx-auto md:min-h-[941px] bg-yellow relative">
         <div class="max-w-[1261px] w-full mx-auto px-[30px] md:pt-[74px] py-[46.5px]">
-            <img class="ml-auto md:flex hidden pb-[56px] pointer-events-none" src="./assets/images/svg/rounded-cross.svg" alt="">
-            <div class="uppercase lg:text-[48px] md:text-[35px] sm:text-[28px] text-[20px] font-tomorrow md:min-h-[325px]">
-                <h3 class="font-semibold text-black md:leading-[123%] md:-mt-3 leading-[119%] max-md:cap-trim">Patoarchitekci to podcast,</h3>
+            <img class="ml-auto md:flex hidden pb-[56px] pointer-events-none"
+                src="./assets/images/svg/rounded-cross.svg" alt="">
+            <div
+                class="uppercase lg:text-[48px] md:text-[35px] sm:text-[28px] text-[20px] font-tomorrow md:min-h-[325px]">
+                <h3 class="font-semibold text-black md:leading-[123%] md:-mt-3 leading-[119%] max-md:cap-trim">
+                    Patoarchitekci to podcast,</h3>
                 <p class="font-medium text-light-black md:leading-[120%] leading-[119%] md:-md-[22px] max-md:cap-trim">
                     który rozkłada IT na czynniki pierwsze, bez zbędnego żargonu i BS. Prowadzą go Łukasz Kałużny i
                     Szymon Warda
@@ -85,12 +91,27 @@
             </div>
             <img class="pt-[47px] md:flex hidden pointer-events-none" src="./assets/images/svg/cross.svg" alt="">
         </div>
-        <img class="absolute md:flex hidden bottom-0 right-0 w-full pointer-events-none" src="./assets/images/png/cloud-white.png" alt="white cloud">
+        <img class="absolute md:flex hidden bottom-0 right-0 w-full pointer-events-none"
+            src="./assets/images/png/cloud-white.png" alt="white cloud">
     </section>
     <!-- podcast section -->
-     <section id="podcast" class="min-h-1007px">
-
-     </section>
+    <section id="podcast"
+        class="lg:min-h-[1007px] md:min-h-[800px] sm:min-h-[650px] min-h-[415px] relative max-w-[1920px] w-full mx-auto lg:pt-[58px] md:pt-[50px] pt-[37px]">
+        <div class="max-w-[1240px] mx-auto px-[30px] w-full">
+            <div class="max-w-[592px] mx-auto w-full">
+                <p
+                    class="font-medium lg:text-[24px] md:text-[18px] sm:text-[16px] text-[12px] leading-[120%] text-center uppercase font-tomorrow">
+                    Stworzyliśmy ten podcast, bo sami szukaliśmy miejsca, które łączy wiedzę, praktykę i dystans do
+                    branży IT.</p>
+                <p
+                    class="font-medium lg:text-[24px] md:text-[18px] sm:text-[16px] text-[12px] leading-[120%] text-center uppercase font-tomorrow lg:pt-[59px] md:pt-12 sm:pt-10 pt-[15px]">
+                    <b class="!font-semibold">Każdy odcinek to dawka trendów,</b> innowacji i konkretnych rozwiązań.
+                </p>
+            </div>
+        </div>
+        <img class="absolute bottom-0 left-0 right-0 w-full" src="./assets/images/png/two-man-with-podcast.png"
+            alt=" podcast">
+    </section>
     <!-------------------NAS SECTION--------------------->
     <section id="oNas" class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
         <div class="max-w-[1240px] mx-auto lg:pt-[105px] md:pt-[140px] pt-[70px] xl:pb-[250px] lg:pb-[120px]">
