--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
     <!-- header -->
-    <header class="max-w-[1920px] mx-auto bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
+    <header
+        class="max-w-[1920px] mx-auto bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
         <div class="md:min-h-[900px] min-h-[844px] max-w-[1240px] mx-auto px-[30px] relative">
             <div
                 class="absolute top-0 w-full max-w-[998px] text-light-black left-1/2 -translate-x-1/2 bg-white h-11 md:flex hidden justify-center font-inter items-center !leading-[100%] uppercase text-base font-bold text-center rounded-b-[15px]">
@@ -53,8 +54,10 @@
             </nav>
             <div
                 class="w-full md:pt-[114px] pt-[133px] flex md:max-w-[800px] md:flex-row flex-col mx-auto px-[30px]  justify-center items-center md:gap-[52px] gap-[27px]">
-                <img class="md:max-w-[236px] max-w-[250px] w-full pointer-events-none" src="./assets/images/svg/logo.svg" alt="logo">
-                <img class="md:max-w-[511px] max-w-[250px] w-full pointer-events-none" src="./assets/images/svg/logo-text.svg" alt="text">
+                <img class="md:max-w-[236px] max-w-[250px] w-full pointer-events-none"
+                    src="./assets/images/svg/logo.svg" alt="logo">
+                <img class="md:max-w-[511px] max-w-[250px] w-full pointer-events-none"
+                    src="./assets/images/svg/logo-text.svg" alt="text">
             </div>
             <div class="flex justify-center items-center flex-col md:pt-[161px] pt-[121px]">
                 <button
@@ -85,7 +88,8 @@
             </div>
             <img class="pt-[66px] pointer-events-none" src="./assets/images/svg/cross.svg" alt="">
         </div>
-        <img class="absolute bottom-0 right-0 w-full pointer-events-none" src="./assets/images/png/cloud-white.png" alt="white cloud">
+        <img class="absolute bottom-0 right-0 w-full pointer-events-none" src="./assets/images/png/cloud-white.png"
+            alt="white cloud">
     </section>
     <!-------------------NAS SECTION--------------------->
     <section id="oNas" class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
