--- a/helper.html
+++ b/helper.html
@@ -17,35 +17,39 @@
 
     </section>
     <!-- ODCINKI section -->
-    <section class="min-h-screen relative bg-light-black">
+    <section class="min-h-screen relative bg-light-black max-w-[1920px] mx-auto">
         <!-- <img class="w-full absolute top-0 left-0" src="./assets/images/png/ODCINKI-top-layer.png" alt="top-layer-img"> -->
         <div class="max-w-[1240px] px-[30px] mx-auto">
-            <h2 class="font-medium text-[64px] text-white font-tomorrow pl-[50px]">ODCINKI</h2>
-            <div class="pt-[83px] flex flex-col gap-[80px]">
-                <div class="flex max-[1024px]:flex-wrap gap-[30px]">
-                    <div class="h-[300px] w-[400px] bg-[#D9D9D9] rounded-[30px] relative">
-                        <img class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 cursor-pointer"
+            <h2 class="font-medium text-[64px] text-white font-tomorrow pl-[50px] max-[1024px]:pl-0">ODCINKI</h2>
+            <div class="pt-[83px] max-[1024px]:pt-[63px] max-[768px]:pt-[43px] max-[426px]:pt-[23px] flex flex-col gap-[80px]">
+                <div class="flex max-[769px]:flex-wrap gap-[30px] max-[426px]:gap-[20px]">
+                    <div
+                        class="h-[300px] w-[400px] max-[768px]:w-[330px] max-[768px]:h-[195px]   bg-[#D9D9D9] rounded-[30px] relative">
+                        <img class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 cursor-pointer h-[69px] w-[69px] max-[768px]:h-[44.85px] max-[768px]:w-[44.85px]"
                             src="./assets/images/svg/play-svg.svg" alt="play-svg">
                     </div>
                     <div>
                         <p
-                            class="text-orange text-4xl font-semibold uppercase leading-[110%] max-w-[810px] font-tomorrow pt-1">
+                            class="text-orange text-4xl  max-[992px]:text-3xl max-[769px]:text-2xl max-[426px]:text-xl font-semibold uppercase leading-[110%] max-w-[810px] font-tomorrow pt-1">
                             Odcinek
                             100:
                             Metryki DORA – mit czy rzeczywistość?</p>
-                        <p class="max-w-[810px] leading-[120%] text-white pt-[20px] font-inter">W tym odcinku gościmy
+                        <p
+                            class="max-w-[810px] leading-[120%] text-white pt-[20px] max-[992px]:pt-[10px] font-inter max-[992px]:text-sm max-[768px]:text-xs">
+                            W tym odcinku gościmy
                             Kingę
                             Gaździńską z Grupy Pracuj i
                             zanurzamy się w świat metryk DORA. Czy
                             faktycznie przewidują przyszłość projektów IT, czy to tylko mit? Kinga rozwiewa wątpliwości
                             i
                             mówi, jak jest naprawdę – bez ściemy. Nie chcesz tego przegapić!</p>
-
-                        <p class="text-orange pt-[37px] text-xs font-inter">#MetrykiDORA #DevOps #IT #ProjektyIT
+                        <p
+                            class="text-orange pt-[37px] text-xs max-[992px]:text-[10px] max-[769px]:pt-[10px] font-inter">
+                            #MetrykiDORA #DevOps #IT #ProjektyIT
                             #KingaGaździńska
                         </p>
                         <button
-                            class="group flex items-center gap-[12px] font-semibold text-xl leading-[100%] bg-white text-black hover:bg-black hover:text-white py-[5px] pl-[5px] pr-[24px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] transition-all duration-300 font-inter">
+                            class="group flex items-center gap-[12px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white py-[5px] pl-[5px] pr-[24px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[769px]:mt-[20px] transition-all duration-300 font-inter">
                             <div
                                 class="h-[36px] w-[36px] rounded-full flex justify-center items-center bg-orange group-hover:bg-white transition-all duration-300">
                                 <svg width="23" height="20" viewBox="0 0 23 20" fill="none"
