--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!-- header -->
+    <!--------------------- header --------------------->
     <header
         class="max-w-[1920px] mx-auto bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
         <div class="md:min-h-[900px] min-h-[844px] max-w-[1240px] mx-auto px-[30px] relative">
@@ -23,7 +23,7 @@
             </div>
             <nav class="max-w-[800px] w-full mx-auto md:pt-[162px]">
                 <ul id="navMenu"
-                    class="flex md:justify-between duration-300 justify-center z-40 max-md:bg-[#803b24] max-md:fixed top-0 -right-full items-center py-5 px-[23px] w-full font-inter max-md:min-h-screen max-md:w-full max-md:flex-col max-md:gap-y-10">
+                    class="flex md:justify-between duration-300 justify-center z-40 max-md:backdrop-blur-[100px] max-md:fixed top-0 -right-full items-center py-5 px-[23px] w-full font-inter max-md:min-h-screen max-md:w-full max-md:flex-col max-md:gap-y-10">
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
                         <a id="nav-link" href="#gdzieSłuchać">Gdzie słuchać</a>
@@ -56,7 +56,7 @@
                 class="w-full md:pt-[114px] pt-[133px] flex md:max-w-[800px] md:flex-row flex-col mx-auto px-[30px]  justify-center items-center md:gap-[52px] gap-[27px]">
                 <img class="md:max-w-[236px] max-w-[250px] w-full pointer-events-none"
                     src="./assets/images/svg/logo.svg" alt="logo">
-                <img class="md:max-w-[511px] max-w-[250px] w-full pointer-events-none"
+                <img class="lg:max-w-[511px] md:max-w-[450px] max-w-[250px] w-full pointer-events-none"
                     src="./assets/images/svg/logo-text.svg" alt="text">
             </div>
             <div class="flex justify-center items-center flex-col md:pt-[161px] pt-[121px]">
@@ -73,7 +73,7 @@
             <img class="h-[46px] w-[41px] pointer-events-none" src="./assets/images/svg/logo.svg" alt="logo">
         </div>
     </header>
-    <!-- patoarchitekciPodcast -->
+    <!--------------------- patoarchitekciPodcast --------------------->
     <section id="patoarchitekciPodcast" class="max-w-[1920px] mx-auto md:min-h-[941px] bg-yellow relative">
         <div class="max-w-[1261px] w-full mx-auto px-[30px] md:pt-[74px] py-[46.5px]">
             <img class="ml-auto md:flex hidden pb-[56px] pointer-events-none"
@@ -94,7 +94,7 @@
         <img class="absolute md:flex hidden bottom-0 right-0 w-full pointer-events-none"
             src="./assets/images/png/cloud-white.png" alt="white cloud">
     </section>
-    <!-- podcast section -->
+    <!--------------------- podcast section --------------------->
     <section id="podcast"
         class="lg:min-h-[1007px] md:min-h-[800px] sm:min-h-[650px] min-h-[415px] relative max-w-[1920px] w-full mx-auto lg:pt-[58px] md:pt-[50px] pt-[37px]">
         <div class="max-w-[1240px] mx-auto px-[30px] w-full">
@@ -286,7 +286,7 @@
             </div>
             <img src="./assets/images/png/cloud-1.png" alt="cloud-1" class="absolute bottom-0 right-0">
     </section>
-    <!-- newsletter -->
+    <!--------------------- newsletter --------------------->
     <section class="px-[30px] relative min-h-[439px] sm:max-h-[758px] sm:min-h-[758px] max-w-[1920px] mx-auto">
         <img class="absolute top-[250px] left-18 pointer-events-none xl:left-20 max-lg:hidden"
             src="./assets/images/svg/newsletter-arrow.svg" alt="arrow-img">
@@ -315,7 +315,7 @@
         <img class="absolute right-0 bottom-0 pointer-events-none max-sm:max-w-[114px] max-sm:max-h-[166px] max-md:max-w-[300px]"
             src="./assets/images/svg/horse.svg" alt="horse-img">
     </section>
-    <!-- footer -->
+    <!--------------------- footer --------------------->
     <footer
         class="bg-light-black px-[30px] max-w-[1920px] mx-auto sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
         <div class="max-w-[1240px] mx-auto">
