add img in podcast section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
     <!-- podcast section -->
     <section id="podcast"
         class="lg:min-h-[1007px] md:min-h-[700px] sm:min-h-[550px] min-h-[415px] relative max-w-[1920px] w-full mx-auto lg:pt-[58px] md:pt-[50px] pt-[37px]">
+        <img class="absolute top-[88px] max-lg:hidden right-[120px]" src="./assets/images/svg/rounded-cross.svg"
+            alt="rounded-cross">
+        <img class="absolute top-[212px] max-md:hidden right-[-56px]" src="./assets/images/svg/cross.svg" alt="cross">
         <div class="max-w-[1240px] mx-auto px-[30px] w-full">
             <div class="max-w-[592px] mx-auto w-full">
                 <p
@@ -287,7 +290,8 @@
             <img src="./assets/images/png/cloud-1.png" alt="cloud-1" class="absolute bottom-0 right-0">
     </section>
     <!-- NEWSLETTERA -->
-    <section class="px-[30px] relative min-h-[439px] sm:max-h-[758px] sm:min-h-[758px] max-w-[1920px] mx-auto">
+    <section id="newslettra"
+        class="px-[30px] relative min-h-[439px] sm:max-h-[758px] sm:min-h-[758px] max-w-[1920px] mx-auto">
         <img class="absolute top-[250px] left-18 pointer-events-none xl:left-20 max-lg:hidden"
             src="./assets/images/svg/newsletter-arrow.svg" alt="arrow-img">
         <div class="max-w-[1220px] mx-auto relative pt-10 md:pt-[103px] z-5">
@@ -316,7 +320,7 @@
             src="./assets/images/svg/horse.svg" alt="horse-img">
     </section>
     <!-- footer -->
-    <footer
+    <footer id="footer"
         class="bg-light-black px-[30px] max-w-[1920px] mx-auto sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
         <div class="max-w-[1240px] mx-auto">
             <div
