--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="md:min-h-[900px] min-h-[844px] max-w-[1240px] mx-auto px-[30px] relative">
             <div
                 class="absolute top-0 w-full max-w-[998px] text-light-black left-1/2 -translate-x-1/2 bg-white h-11 md:flex hidden justify-center font-inter items-center !leading-[100%] uppercase text-base font-bold text-center rounded-b-[15px]">
-                Do najbliższego szkolenia <span class="text-[#FF4405]">zostały 3 dni!</span> <span
-                    class="text-[#FF4405] !font-medium">👉 Zapisz się teraz!</span>
+                Do najbliższego szkolenia <span class="text-orange">zostały 3 dni!</span> <span
+                    class="text-orange !font-medium">👉 Zapisz się teraz!</span>
             </div>
             <nav class="max-w-[800px] w-full mx-auto md:pt-[162px]">
                 <ul id="navMenu"
