--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     <!--------------------- podcast section --------------------->
     <section id="podcast"
         class="lg:min-h-[1007px] md:min-h-[700px] sm:min-h-[550px] min-h-[415px] relative max-w-[1920px] w-full mx-auto lg:pt-[58px] md:pt-[50px] pt-[37px]">
-        <img class="absolute top-[88px] max-lg:hidden right-[120px]" src="./assets/images/svg/rounded-cross.svg"
+        <img class="absolute top-[88px] max-lg:hidden right-[120px] pointer-events-none" src="./assets/images/svg/rounded-cross.svg"
             alt="rounded-cross">
-        <img class="absolute top-[212px] max-md:hidden right-[-56px]" src="./assets/images/svg/cross.svg" alt="cross">
+        <img class="absolute top-[212px] max-md:hidden right-[-56px] pointer-events-none" src="./assets/images/svg/cross.svg" alt="cross">
         <div class="max-w-[1240px] mx-auto px-[30px] w-full">
             <div class="max-w-[592px] mx-auto w-full">
                 <p
@@ -115,7 +115,7 @@
         <img class="absolute pointer-events-none bottom-0 left-0 right-0 w-full max-h-[314px] sm:max-h-[1000px]"
             src="./assets/images/png/two-man-with-podcast.png" alt="podcast">
     </section>
-    <!-------------------NAS SECTION--------------------->
+    <!------------------- NAS SECTION --------------------->
     <section id="oNas" class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
         <div class="max-w-[1240px] mx-auto lg:pt-[105px] md:pt-[140px] pt-[70px] xl:pb-[250px] lg:pb-[120px]">
             <div class="lg:flex px-[30px]">
@@ -186,7 +186,7 @@
         </div>
         <img src="./assets/images/png/layer-svg.png" alt="decorative layer" class="z-20 absolute bottom-0">
     </section>
-    <!-------------------USŁUGI SECTION------------------->
+    <!------------------- USŁUGI SECTION ------------------->
     <section class="pt-16 md:pb-[139px] pb-14 bg-light-black max-w-[1920px] mx-auto">
         <div class="container mx-auto max-w-[1240px] px-[30px]">
             <div class="flex justify-between">
@@ -266,7 +266,7 @@
             </div>
         </div>
     </section>
-    <!-------------------PROTOPIA SECTION------------------->
+    <!------------------- PROTOPIA SECTION ------------------->
     <section class="bg-orange relative max-w-[1920px] mx-auto">
         <div class="container max-w-[1240px] mx-auto">
             <div class="flex md:pt-24 pt-14 xl:pb-80 md:pb-64 pb-32 px-[30px] ">
@@ -289,7 +289,7 @@
             </div>
             <img src="./assets/images/png/cloud-1.png" alt="cloud-1" class="absolute bottom-0 right-0">
     </section>
-    <!-- NEWSLETTERA -->
+    <!--------------------- NEWSLETTERA --------------------->
     <section id="newslettra"
         class="px-[30px] relative min-h-[439px] sm:max-h-[758px] sm:min-h-[758px] max-w-[1920px] mx-auto">
         <img class="absolute top-[250px] left-18 pointer-events-none xl:left-20 max-lg:hidden"
@@ -321,6 +321,7 @@
     </section>
     <!--------------------- footer --------------------->
     <footer
+    id="footer"
         class="bg-light-black px-[30px] max-w-[1920px] mx-auto sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
         <div class="max-w-[1240px] mx-auto">
             <div
