--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
     <!--------------------- podcast section --------------------->
     <section id="podcast"
         class="lg:min-h-[1007px] md:min-h-[700px] sm:min-h-[550px] min-h-[415px] relative max-w-[1920px] w-full mx-auto lg:pt-[58px] md:pt-[50px] pt-[37px]">
-        <img class="absolute top-[88px] max-lg:hidden right-[120px] pointer-events-none" src="./assets/images/svg/rounded-cross.svg"
-            alt="rounded-cross">
-        <img class="absolute top-[212px] max-md:hidden right-[-56px] pointer-events-none" src="./assets/images/svg/cross.svg" alt="cross">
+        <img class="absolute top-[88px] max-lg:hidden right-[120px] pointer-events-none"
+            src="./assets/images/svg/rounded-cross.svg" alt="rounded-cross">
+        <img class="absolute top-[212px] max-md:hidden right-[-56px] pointer-events-none"
+            src="./assets/images/svg/cross.svg" alt="cross">
         <div class="max-w-[1240px] mx-auto px-[30px] w-full">
             <div class="max-w-[592px] mx-auto w-full">
                 <p
@@ -116,8 +117,8 @@
             src="./assets/images/png/two-man-with-podcast.png" alt="podcast">
     </section>
     <!-------------------NAS SECTION--------------------->
-    <section id="oNas" class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto xl:min-h-[1443px]">
-        <div class="max-w-[1240px] mx-auto lg:pt-[160px] md:pt-[140px] pt-[70px] xl:pb-[240px] lg:pb-[120px]">
+    <section class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
+        <div class="max-w-[1240px] mx-auto lg:pt-[165px] md:pt-[140px] pt-[70px] xl:pb-[258px] lg:pb-[120px]">
             <div class="lg:flex px-[30px]">
                 <div class="lg:max-w-md">
                     <h2 class="font-semibold text-[64px] text-light-black font-tomorrow leading-[100%] uppercase">
@@ -132,7 +133,8 @@
                             Łukasz Kałużny
                         </h2>
                         <p class="font-inter font-medium md:text-xl text-lg leading-[100%] pt-[35px] lg:max-w-[423px]">
-                            Inżynier, architekt i współzałożyciel Protopia. Specjalista od Microsoft Azure z tytułem MVP od
+                            Inżynier, architekt i współzałożyciel Protopia. Specjalista od Microsoft Azure z tytułem MVP
+                            od
                             2012 roku. Uwielbia wyzwania i najnowsze technologie. Łukasz pomaga firmom przekształcać
                             technologię w realne korzyści biznesowe. Jego motto: zero bullshitu, same konkrety. Zawsze z
                             porządną dawką humoru.
@@ -154,7 +156,8 @@
                         <p class="font-inter font-medium md:text-xl text-lg leading-[100%] pt-[35px] lg:max-w-[423px]">
                             Managing Partner i Doradca Technologiczny w Protopia, Blogger @ IndexOutOfRange, Autor @
                             Pluralsight, Ambasador @ Neo4j. Szymon prowadzi organizacje przez wyzwania najnowszych
-                            technologii, oferując pragmatyczne, dopasowane rozwiązania. Jego wiedza techniczna idzie w parze
+                            technologii, oferując pragmatyczne, dopasowane rozwiązania. Jego wiedza techniczna idzie w
+                            parze
                             ze świetną komunikacją. Praca z nim to jedyne w swoim rodzaju doświadczenie.
                         </p>
                         <div class="pt-[35px] gap-3 flex">
@@ -176,29 +179,29 @@
                 </div>
                 <div>
                     <img src="./assets/images/svg/circle.svg" alt="decorative circle"
-                        class="absolute lg:top-[5%] lg:right-[-10.5%] xl:size-[303px] lg:size-[230px] md:size-[100px] size-12 top-0 ">
+                        class="absolute lg:top-[6%] lg:right-[-10.5%] xl:size-[303px] lg:size-[230px] md:size-[100px] size-12 top-0 ">
                     <img src="./assets/images/png/two-people.png" alt="Two people"
                         class="xl:max-w-[1000px] lg:max-w-[700px] md:max-w-[600px] lg:absolute xl:top-[8%] top-[11%] right-[0%] object-cover rounded-lg z-0" />
                 </div>
             </div>
         </div>
-        <img src="./assets/images/png/layer.png" alt="decorative layer" class="z-20 absolute bottom-0 xl:min-h-[250px]">
+        <img src="./assets/images/png/layer-svg.png" alt="decorative layer" class="z-20 absolute bottom-0">
     </section>
     <!-------------------USŁUGI SECTION------------------->
     <section class="pt-16 md:pb-[139px] pb-14 bg-light-black max-w-[1920px] mx-auto">
         <div class="container mx-auto max-w-[1240px] px-[30px]">
             <div class="flex justify-between">
                 <h2
-                    class="md:text-[64px] text-5xl uppercase text-white xl:pb-[170px] lg:pb-32 md:pb-[76px] pb-14 font-medium font-tomorrow">
+                    class="md:text-[64px] text-5xl uppercase text-white xl:pb-[176px] lg:pb-32 md:pb-[76px] pb-14 font-medium font-tomorrow">
                     Usługi</h2>
                 <img src="./assets/images/svg/faq-arrow.svg" alt="faq-arrow"
                     class="lg:pb-[93px] pb-[40px]  max-lg:size-28 max-md:size-20">
             </div>
             <div id="accordion" class="flex flex-col md:gap-11 gap-6">
-                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
+                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header md:h-[90px] w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         SZKOLENIA OTWARTE
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -207,14 +210,14 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content max-h-0 overflow-hidden transition-all duration-500 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
-                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
+                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header md:h-[90px] w-full uppercase flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header w-full uppercase flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         Szkolenia dla firm
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -223,14 +226,14 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content max-h-0 overflow-hidden transition-all duration-500 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
-                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
+                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header md:h-[90px] uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         Konsultacje
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -239,14 +242,14 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content max-h-0 overflow-hidden transition-all duration-500 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
-                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-300 ease-in-out rounded-full"
+                <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
                     style="border-radius: 50px;">
                     <button
-                        class="accordion-header md:h-[90px] uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
+                        class="accordion-header uppercase w-full flex justify-between items-center md:pl-[45px] pl-4 pr-2 py-3 md:text-[40px] text-xl leading-[100%] font-semibold">
                         Doradztwo
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
@@ -255,7 +258,7 @@
                         </span>
                     </button>
                     <div
-                        class="accordion-content max-h-0 overflow-hidden transition-all duration-300 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
+                        class="accordion-content max-h-0 overflow-hidden transition-all duration-500 pl-[45px] pr-6 text-base text-black rounded-b-2xl">
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
@@ -267,27 +270,23 @@
     <!-------------------PROTOPIA SECTION------------------->
     <section class="bg-orange relative max-w-[1920px] mx-auto">
         <div class="container max-w-[1240px] mx-auto">
-            <div class="md:flex md:pt-[91px] pt-14 xl:pb-[296px] md:pb-64 pb-24 px-[30px] ">
-                <div class="flex flex-row  gap-5">
-                    <img src="./assets/images/png/protopia-img.png" alt="protopia-img" class="md:size-[225px] size-[100px]">
+            <div class="flex md:pt-24 pt-14 xl:pb-80 md:pb-64 pb-32 px-[30px] ">
+                <div class="flex flex-col md:flex-row  gap-5">
+                    <img src="./assets/images/png/protopia-img.png" alt="protopia-img" class="md:size-[225px] w-full">
                     <div class="flex flex-col">
                         <h1
-                            class="md:text-3xl text-sm lg:text-4xl md:pb-[17px] pb-[10px] !leading-[130%] max-w-[864px] uppercase font-semibold font-inter text-white">
+                            class="md:text-3xl text-2xl lg:text-4xl pb-[17px] leading-[100%] max-w-[864px] uppercase font-semibold font-inter text-white">
                             Słuchasz Patoarchitektów dzięki firmie Protopia.
                         </h1>
-                        <p class="md:text-xl text-xs text-white uppercase leading-[100%]">
+                        <p class="text-xl text-white uppercase leading-[100%]">
                             Doradzamy, szkolimy i wdrażamy innowacje, które napędzają rozwój firm.
                         </p>
                         <button
-                            class="hidden md:block xl:mt-[42px] lg:mt-6 md:mt-[40px] mt-6 md:px-11 px-9 py-[9px] border border-black text-black  rounded-full md:text-2xl text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
+                            class="xl:mt-[65px] lg:mt-9 md:mt-[43px] mt-6 md:px-11 px-9 py-[9px] border border-black text-black  rounded-full md:text-2xl text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
                             POZNAJ NASZĄ OFERTĘ
                         </button>
                     </div>
                 </div>
-                <button
-                    class="mb-20 block md:hidden mt-6 whitespace-nowrap px-11 border border-black text-black  rounded-full text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
-                    POZNAJ NASZĄ OFERTĘ
-                </button>
             </div>
             <img src="./assets/images/png/cloud-1.png" alt="cloud-1" class="absolute bottom-0 right-0">
     </section>
@@ -322,8 +321,7 @@
             src="./assets/images/svg/horse.svg" alt="horse-img">
     </section>
     <!--------------------- footer --------------------->
-    <footer
-    id="footer"
+    <footer id="footer"
         class="bg-light-black px-[30px] max-w-[1920px] mx-auto sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
         <div class="max-w-[1240px] mx-auto">
             <div
