change in protopia section

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/images/png/layer-svg.png" alt="decorative layer" class="z-20 absolute bottom-0">
+        <img src="./assets/images/png/layer.png" alt="decorative layer" class="z-20 absolute bottom-0">
     </section>
     <!-------------------USŁUGI SECTION------------------->
     <section class="pt-16 md:pb-[139px] pb-14 bg-light-black max-w-[1920px] mx-auto">
@@ -262,33 +262,37 @@
                         <p class="pb-4">Details about SZKOLENIA OTWARTE</p>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </section>
     <!-------------------PROTOPIA SECTION------------------->
-    <section class="bg-orange relative max-w-[1920px] mx-auto">
+    <section class="bg-orange relative max-w-[1920px] mx-auto xl:min-h-[612px]">
         <div class="container max-w-[1240px] mx-auto">
-            <div class="flex md:pt-24 pt-14 xl:pb-80 md:pb-64 pb-32 px-[30px] ">
-                <div class="flex flex-col md:flex-row  gap-5">
-                    <img src="./assets/images/png/protopia-img.png" alt="protopia-img" class="md:size-[225px] w-full">
+            <div class="md:flex md:pt-[91px] xl:pb-[296px] md:pb-64 p-[30px]">
+                <div class="flex flex-row  gap-5">
+                    <img src="./assets/images/png/protopia-img.png" alt="protopia-img"
+                        class="md:size-[225px] size-[100px] pointer-events-none">
                     <div class="flex flex-col">
                         <h1
-                            class="md:text-3xl text-2xl lg:text-4xl pb-[17px] leading-[100%] max-w-[864px] uppercase font-semibold font-inter text-white">
+                            class="md:text-3xl text-sm lg:text-4xl md:pb-[17px] pb-[10px] !leading-[130%] max-w-[864px] uppercase font-semibold font-inter text-white">
                             Słuchasz Patoarchitektów dzięki firmie Protopia.
                         </h1>
-                        <p class="text-xl text-white uppercase leading-[100%]">
+                        <p class="md:text-xl text-xs text-white uppercase leading-[100%]">
                             Doradzamy, szkolimy i wdrażamy innowacje, które napędzają rozwój firm.
                         </p>
                         <button
-                            class="xl:mt-[65px] lg:mt-9 md:mt-[43px] mt-6 md:px-11 px-9 py-[9px] border border-black text-black  rounded-full md:text-2xl text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
+                            class="hidden md:block active:scale-95 xl:mt-[42px] lg:mt-6 md:mt-[40px] mt-6 md:px-11 px-9 py-[9px] border border-black text-black rounded-full md:text-2xl text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
                             POZNAJ NASZĄ OFERTĘ
                         </button>
                     </div>
                 </div>
+                <button
+                    class="sm:mb-5 block md:hidden active:scale-95 max-sm:!max-w-[150px] max-sm:!text-[9.73px] mt-6 whitespace-nowrap px-[17px] py-[5.62px] border border-black text-black rounded-full text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
+                    POZNAJ NASZĄ OFERTĘ
+                </button>
             </div>
-            <img src="./assets/images/png/cloud-1.png" alt="cloud-1" class="absolute bottom-0 right-0">
+            <img src="./assets/images/png/cloud-1.png" alt="cloud-1"
+                class="absolute max-md:hidden pointer-events-none bottom-0 right-0">
     </section>
     <!--------------------- NEWSLETTERA --------------------->
     <section id="newslettra"
