--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!--------------------- header --------------------->
+    <!-- header -->
     <header
         class="max-w-[1920px] mx-auto bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
         <div class="md:min-h-[900px] min-h-[844px] max-w-[1240px] mx-auto px-[30px] relative">
@@ -73,7 +73,7 @@
             <img class="h-[46px] w-[41px] pointer-events-none" src="./assets/images/svg/logo.svg" alt="logo">
         </div>
     </header>
-    <!--------------------- patoarchitekciPodcast --------------------->
+    <!-- patoarchitekciPodcast -->
     <section id="patoarchitekciPodcast" class="max-w-[1920px] mx-auto md:min-h-[941px] bg-yellow relative">
         <div class="max-w-[1261px] w-full mx-auto px-[30px] md:pt-[74px] py-[46.5px]">
             <img class="ml-auto md:flex hidden pb-[56px] pointer-events-none"
@@ -94,7 +94,7 @@
         <img class="absolute md:flex hidden bottom-0 right-0 w-full pointer-events-none"
             src="./assets/images/png/cloud-white.png" alt="white cloud">
     </section>
-    <!--------------------- podcast section --------------------->
+    <!-- podcast section -->
     <section id="podcast"
         class="lg:min-h-[1007px] md:min-h-[700px] sm:min-h-[550px] min-h-[415px] relative max-w-[1920px] w-full mx-auto lg:pt-[58px] md:pt-[50px] pt-[37px]">
         <img class="absolute top-[88px] max-lg:hidden right-[120px] pointer-events-none"
@@ -103,10 +103,10 @@
             src="./assets/images/svg/cross.svg" alt="cross">
         <div class="max-w-[1240px] mx-auto px-[30px] w-full">
             <div class="max-w-[592px] mx-auto w-full">
-                <p
+                <h2
                     class="font-medium lg:text-[24px] md:text-[18px] sm:text-[16px] text-[12px] leading-[120%] text-center uppercase font-tomorrow">
                     Stworzyliśmy ten podcast, bo sami szukaliśmy miejsca, które łączy wiedzę, praktykę i dystans do
-                    branży IT.</p>
+                    branży IT.</h2>
                 <p
                     class="font-medium lg:text-[24px] md:text-[18px] sm:text-[16px] text-[12px] leading-[120%] text-center uppercase font-tomorrow lg:pt-[59px] md:pt-12 sm:pt-10 pt-[15px]">
                     <b class="!font-semibold">Każdy odcinek to dawka trendów,</b> innowacji i konkretnych rozwiązań.
@@ -116,7 +116,7 @@
         <img class="absolute pointer-events-none bottom-0 left-0 right-0 w-full max-h-[314px] sm:max-h-[1000px]"
             src="./assets/images/png/two-man-with-podcast.png" alt="podcast">
     </section>
-    <!-------------------NAS SECTION--------------------->
+    <!-- NAS SECTION -->
     <section class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
         <div class="max-w-[1240px] mx-auto lg:pt-[165px] md:pt-[140px] pt-[70px] xl:pb-[258px] lg:pb-[120px]">
             <div class="lg:flex px-[30px]">
@@ -179,15 +179,15 @@
                 </div>
                 <div>
                     <img src="./assets/images/svg/circle.svg" alt="decorative circle"
-                        class="absolute lg:top-[6%] lg:right-[-10.5%] xl:size-[303px] lg:size-[230px] md:size-[100px] size-12 top-0 ">
+                        class="absolute lg:top-[6%] lg:right-[-10.5%] xl:size-[303px] lg:size-[230px] md:size-[100px] size-12 top-0">
                     <img src="./assets/images/png/two-people.png" alt="Two people"
-                        class="xl:max-w-[1000px] lg:max-w-[700px] md:max-w-[600px] lg:absolute xl:top-[8%] top-[11%] right-[0%] object-cover rounded-lg z-0" />
+                        class="xl:max-w-[1000px] lg:max-w-[700px] md:max-w-[600px] lg:absolute xl:top-[8%] top-[11%] right-[0%] object-cover rounded-lg z-0">
                 </div>
             </div>
         </div>
         <img src="./assets/images/png/layer.png" alt="decorative layer" class="z-20 absolute bottom-0">
     </section>
-    <!-------------------USŁUGI SECTION------------------->
+    <!-- USŁUGI SECTION -->
     <section class="pt-16 md:pb-[139px] pb-14 bg-light-black max-w-[1920px] mx-auto">
         <div class="container mx-auto max-w-[1240px] px-[30px]">
             <div class="flex justify-between">
@@ -206,7 +206,7 @@
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
                             <img src="./assets/images/svg/white-arrow.svg" alt="white-arrow"
-                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300" />
+                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300">
                         </span>
                     </button>
                     <div
@@ -222,7 +222,7 @@
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
                             <img src="./assets/images/svg/white-arrow.svg" alt="white-arrow"
-                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300" />
+                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300">
                         </span>
                     </button>
                     <div
@@ -238,7 +238,7 @@
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
                             <img src="./assets/images/svg/white-arrow.svg" alt="white-arrow"
-                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300" />
+                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300">
                         </span>
                     </button>
                     <div
@@ -254,7 +254,7 @@
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
                             <img src="./assets/images/svg/white-arrow.svg" alt="white-arrow"
-                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300" />
+                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300">
                         </span>
                     </button>
                     <div
@@ -265,7 +265,7 @@
             </div>
         </div>
     </section>
-    <!-------------------PROTOPIA SECTION------------------->
+    <!-- PROTOPIA SECTION -->
     <section class="bg-orange relative max-w-[1920px] mx-auto xl:min-h-[612px]">
         <div class="container max-w-[1240px] mx-auto">
             <div class="md:flex md:pt-[91px] xl:pb-[296px] md:pb-64 p-[30px]">
@@ -293,8 +293,9 @@
             </div>
             <img src="./assets/images/png/cloud-1.png" alt="cloud-1"
                 class="absolute max-md:hidden pointer-events-none bottom-0 right-0">
+        </div>
     </section>
-    <!--------------------- NEWSLETTERA --------------------->
+    <!-- NEWSLETTERA -->
     <section id="newslettra"
         class="px-[30px] relative min-h-[439px] sm:max-h-[758px] sm:min-h-[758px] max-w-[1920px] mx-auto">
         <img class="absolute top-[250px] left-18 pointer-events-none xl:left-20 max-lg:hidden"
@@ -324,7 +325,7 @@
         <img class="absolute right-0 bottom-0 pointer-events-none max-sm:max-w-[114px] max-sm:max-h-[166px] max-md:max-w-[300px]"
             src="./assets/images/svg/horse.svg" alt="horse-img">
     </section>
-    <!--------------------- footer --------------------->
+    <!-- footer -->
     <footer id="footer"
         class="bg-light-black px-[30px] max-w-[1920px] mx-auto sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
         <div class="max-w-[1240px] mx-auto">
