fill all alt of img

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section id="patoarchitekciPodcast" class="max-w-[1920px] mx-auto md:min-h-[941px] bg-yellow relative">
         <div class="max-w-[1261px] w-full mx-auto px-[30px] md:pt-[74px] py-[46.5px]">
             <img class="ml-auto md:flex hidden pb-[56px] pointer-events-none"
-                src="./assets/images/svg/rounded-cross.svg" alt="">
+                src="./assets/images/svg/rounded-cross.svg" alt="cross-img">
             <div
                 class="uppercase lg:text-[48px] md:text-[35px] sm:text-[28px] text-[20px] font-tomorrow md:min-h-[325px]">
                 <h3 class="font-semibold text-black md:leading-[123%] md:-mt-3 leading-[119%] max-md:cap-trim">
@@ -89,7 +89,7 @@
                     którzy z humorem i szczerością biorą na warsztat najtrudniejsze tematy technologiczne.
                 </p>
             </div>
-            <img class="pt-[47px] md:flex hidden pointer-events-none" src="./assets/images/svg/cross.svg" alt="">
+            <img class="pt-[47px] md:flex hidden pointer-events-none" src="./assets/images/svg/cross.svg" alt="cross-img">
         </div>
         <img class="absolute md:flex hidden bottom-0 right-0 w-full pointer-events-none"
             src="./assets/images/png/cloud-white.png" alt="white cloud">
